# bitutils

./: README.md  pyproject.toml
src/vfork/: __init__.py  path.py  util.py
src/vfork/alignment/: __init__.py  adb.py  base.py  parser.py  scoring.py
src/vfork/config/: __init__.py  mapconfig.py
src/vfork/draw/: __init__.py  coords.py  plot.py  surface.py
src/vfork/fasta/: __init__.py  fasta2tab.py  reader.py  writer.py
src/vfork/fastq/: __init__.py  fastq2tab.py  reader.py  writer.py
src/vfork/genbank/: __init__.py  reader.py
src/vfork/geometry/: __init__.py  region.py
src/vfork/io/: .gitignore  __init__.py  _colreader.pxd  colreader.c  colreader.i  colreader.pyx  reader.c  reader.h  strtok.c  strtok.h  util.py
src/vfork/microarray/: __init__.py  genepix.py
src/vfork/sequence/: __init__.py  base.py
src/vfork/sql/: databaseparams.py  mysql2postgres.py
src/vfork/stat/: __init__.py  statistics.py
src/vfork/tab2/: tab2fasta.py  tab2fastq.py
src/vfork/tools/: symbol_freq.py
src/vfork/tsv/: tab2fasta.py
src/vfork/ucsc/: __init__.py
