[tool.poetry]
name = "bitutils"
version = "0.1.0"
description = "BioinfoTree core modules"
authors = ["Gabriele Sales <gbrsales@gmail.com>"]
license = "Proprietary"
packages = [
  { include = "vfork", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastq2tab = 'vfork.fastq.fastq2tab:main'