[tool.poetry]
name = "bitutils"
version = "0.1.0"
description = "BioinfoTree core modules"
authors = ["Gabriele Sales <gbrsales@gmail.com>"]
license = "AGPL-3"
packages = [
  { include = "vfork", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastq2tab = 'vfork.fastq.fastq2tab:main'
fasta2tab = 'vfork.fasta.fasta2tab:main'
tab2fasta = 'vfork.tsv.tab2fasta:main'
symbol_freq = 'vfork.tools.symbol_freq:main'
symbol_count = 'vfork.tools.symbol_freq:main'
